--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/sitemap": "^2.0.1",
     "@vue/composition-api": "^0.6.7",
-    "axios": "^0.21.2",
     "babel-plugin-prismjs": "^2.0.1",
     "color": "^3.1.2",
     "cross-env": "^7.0.2",
     "date-fns": "^2.7.0",
     "nuxt": "^2.13.2",
-    "prismjs": "^1.21.0"
+    "prismjs": "^1.21.0",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^1.0.3",
@@ -33,7 +33,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "mkdirp-promise": "^5.0.1",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "nuxt-svg-loader": "^1.2.0",
     "prettier": "^1.16.4",
